# ircc-ai

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile.bot.x86_64  Dockerfile.embed  Dockerfile.embed.x86_64  Dockerfile.oracle.x86_64  Makefile  Makefile.local  README.md  bot.Dockerfile  docker-compose.yml  embed.Dockerfile  oracle.Dockerfile  rustfmt.toml
.cargo/: config.toml
docker/: Dockerfile.bot  Dockerfile.bot.prod  Dockerfile.embed  Dockerfile.embed.prod  Dockerfile.oracle  Dockerfile.oracle.prod
k8s/: create_k8s_config.sh  how-to-deploy.md
k8s/bot/: deployment.yaml
k8s/embed/: job.yaml
k8s/oracle/: deployment.yaml  service.yaml
k8s/qdrant/: deployment.yaml  service.yaml
scripts/: replace_links.sh
scripts/scrapy/spiders/: canada_ca_html_spider.py  canada_ca_md_spider.py  canada_ca_txt_spider.py
src/: constants.rs  lib.rs
src/convrsation/: data.rs  mod.rs  prompts.rs
src/db/: mod.rs  qdrant.rs
src/embeddings/: mod.rs  onnx.rs
src/fs/: mod.rs
src/routes/: events.rs  mod.rs
src/utils/: functions.rs  hash.rs  macros.rs  mod.rs
