[package]
name = "ircc-ai"
version = "0.1.0"
edition = "2021"
description = "A simple IRCC generative AI chatbot"
readme = "README.md"
repository = "https://github.com/EtaCassiopeia/ircc-ai"
authors = ["Mohsen Zainalpour <zainalpour@yahoo.com>"]
license = "MIT"

default-run = "embed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "embed"
path = "src/bin/embed.rs"

[dependencies]
anyhow = "1"
async-recursion = "1"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
ndarray = "0.15"
ort = {version = "1", features = ["load-dynamic"]}
tokio = {version = "1",  features = ["full"] }
tokenizers = "0.14"
futures = "0.3.28"


