[package]
name = "ircc-ai"
version = "0.1.0"
edition = "2021"
description = "A simple IRCC generative AI chatbot"
readme = "README.md"
repository = "https://github.com/EtaCassiopeia/ircc-ai"
authors = ["Mohsen Zainalpour <zainalpour@yahoo.com>"]
license = "MIT"

default-run = "oracle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["oracle"]
oracle = ["actix-web","actix-web-lab","actix-rt","tracing-actix-web","actix-cors","openai-api-rs"]
bot = ["teloxide", "pretty_env_logger", "eventsource-client"]

[[bin]]
name = "embed"
path = "src/bin/embed.rs"

[[bin]]
name = "oracle"
path = "src/bin/oracle.rs"
features = ["oracle"]

[[bin]]
name = "bot"
path = "src/bin/bot.rs"
features = ["bot"]


[dependencies]
anyhow = "1"
async-recursion = "1"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
ndarray = "0.15"
ort = {version = "1", features = ["load-dynamic"]}
tokio = {version = "1",  features = ["full"] }
tokenizers = "0.14"
futures = "0.3.28"
async-trait = "0.1"
qdrant-client = "1"
rayon = "1"
openai-api-rs = {version="1.0", optional = true }
serde = "1"
serde_json = "1"
text-splitter = "0.4"
rust-fuzzy-search = "0.1"
actix-web = {version="4", optional = true }
actix-web-lab = {version="0.19",optional = true }
actix-rt = {version="2",optional = true }
tracing-actix-web = {version="0.7",optional = true }
actix-cors = {version="0.6.4",optional = true }


teloxide = { version = "0.12", features = ["macros"] ,optional = true}
pretty_env_logger = {version = "0.5", optional = true}

eventsource-client =  {version = "0.11", optional = true}